解决品牌管理修改时报空指针,实际是没有注入service 添加了third-party文件上传模块,用的是阿里oss

--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -111,6 +111,10 @@
             <artifactId>hibernate-validator-cdi</artifactId>
             <version>6.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
     </dependencies>
 
 
