--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>renren-fast</module>
         <module>gulimall-common</module>
         <module>gulimall-gateway</module>
+        <module>gulimall-third-party</module>
     </modules>
 
 
