--- a/gulimall-third-party/src/main/resources/application.yml
+++ b/gulimall-third-party/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
       discovery:
         server-addr: 192.168.3.22:8848
     alicloud:
-      access-key: LTAI5t5qum1mPPXrxgDU9d6M
-      secret-key: lPCahXjDMYUHx3Lr3itSBnvXB8zVI7
+      access-key: ***
+      secret-key: ***
       oss:
         endpoint: oss-cn-hangzhou.aliyuncs.com
         bucket: gulimall-atg
