--- a/renren-fast-vue/package.json
+++ b/renren-fast-vue/package.json
@@ -26,14 +26,17 @@
     "lodash": "4.17.5",
     "node-sass": "^6.0.1",
     "npm": "^6.9.0",
+    "pubsub-js": "^1.9.4",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
+    "utils": "^0.3.1",
     "vue": "2.5.16",
     "vue-cookie": "1.1.4",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "autoprefixer": "7.1.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -66,6 +69,7 @@
     "html-webpack-plugin": "2.30.1",
     "jest": "21.2.0",
     "jest-serializer-vue": "0.3.0",
+    "mock": "^0.1.1",
     "nightwatch": "0.9.12",
     "node-notifier": "5.1.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -79,6 +83,7 @@
     "shelljs": "0.7.6",
     "uglifyjs-webpack-plugin": "1.1.1",
     "url-loader": "0.5.8",
+    "utils": "^0.3.1",
     "vue-jest": "1.0.2",
     "vue-loader": "13.3.0",
     "vue-style-loader": "3.0.1",
