--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -107,7 +107,7 @@
             <version>3.0.1-b11</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator-cdi</artifactId>
             <version>6.1.0.Final</version>
         </dependency>
