商品模块开发完成

--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -43,7 +43,12 @@ spring:
         - id: gulimall_host_route
           uri: lb://gulimall-product
           predicates:
-            - Host=**.gulimall.com
+            - Host=gulimall.com,item.gulimall.com
+
+        - id: search_gulimall_host_route
+          uri: lb://gulimall-search
+          predicates:
+            - Host=search.gulimall.com
   application:
     name: gulimall-gateway
 server:
