--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -23,5 +23,17 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+
+logging:
+  level:
+    com.atg.gulimall.product: debug
+    root: warn
+  pattern:
+    console: "%d{yyyy-MM-dd} [%thread] - %msg%n"
 server:
   port: 8084
+gulimall:
+  thread:
+    core-size: 20
+    max-size: 200
+    keep-alive-time: 10
