--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -60,6 +60,10 @@
 					<groupId>com.alibaba.cloud</groupId>
 					<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>com.alibaba</groupId>
+					<artifactId>druid-spring-boot-starter</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
