--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -49,7 +49,19 @@ spring:
           uri: lb://gulimall-search
           predicates:
             - Host=search.gulimall.com
+
+        - id: auth_gulimall_host_route
+          uri: lb://gulimall-auth
+          predicates:
+            - Host=auth.gulimall.com
   application:
     name: gulimall-gateway
 server:
   port: 88
+
+logging:
+  level:
+    com.atg.gulimall.gateway: debug
+    root: warn
+  pattern:
+    console: "%d{yyyy-MM-dd} [%thread] - %msg%n"
