--- a/gulimall-member/pom.xml
+++ b/gulimall-member/pom.xml
@@ -27,6 +27,10 @@
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-starter-bootstrap</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.session</groupId>
+                    <artifactId>spring-session-data-redis</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
