--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>gulimall-third-party</module>
         <module>gulimall-search</module>
         <module>renren-generator</module>
+        <module>gulimall-auth</module>
+        <module>gulimall-cart</module>
     </modules>
 
 
