--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -54,6 +54,10 @@ spring:
           uri: lb://gulimall-auth
           predicates:
             - Host=auth.gulimall.com
+        - id: cart_gulimall_host_route
+          uri: lb://gulimall-cart
+          predicates:
+            - Host=cart.gulimall.com
   application:
     name: gulimall-gateway
 server:
